--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^14.1.1",
     "bootstrap": "^5.1.3",
+    "draft-js": "^0.11.7",
+    "draftjs-to-html": "^0.9.1",
     "firebase": "^9.7.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-draft-wysiwyg": "^1.14.7",
+    "react-quill": "^1.3.5",
     "react-redux": "^8.0.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
